# miminal-multithreaded-wasm-in-the-browser-example

./: Cargo.toml  README.md  _headers  index.html  serve.py
pkg/: package.json  wasmtest.d.ts  wasmtest.js  wasmtest_bg.wasm  wasmtest_bg.wasm.d.ts
src/: lib.rs
