[package]
name = "wasmtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "*"
wasm-bindgen = "*"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }